사진 화질 개선

--- a/app/src/css/Photo.css
+++ b/app/src/css/Photo.css
@@ -61,11 +61,125 @@
      background-repeat: no-repeat;
      background-position: center;
 }
-
-.right-photo-div {
+.right-preview-ul{
+     position: absolute;
+     top: 12%;
+     right: 9%;
+     width: 15%;
+     height: 75%;
+     overflow: hidden;
+}
+.right-preview-div{
+     position: absolute;
+     top: 12%;
+     right: 9%;
+     width: 15%;
+     height: 80%;
+     background-size: contain;
+     background-repeat: no-repeat;
+     background-position: center;
+     overflow: hidden;
+}
+.preview-default-0{
+     z-index: 900;
      position: absolute;
      top: 10%;
-     right: 9%;
+     left: 8%;
+     width: 85%;
+     height: 20%;
+     background-size: contain;
+     background-repeat: no-repeat;
+     background-position: center;
+}
+.preview-default-1{
+     z-index: 900;
+     position: absolute;
+     top: 31%;
+     left: 8%;
+     width: 85%;
+     height: 20%;
+     background-size: contain;
+     background-repeat: no-repeat;
+     background-position: center;
+}
+.preview-default-2{
+     z-index: 900;
+     position: absolute;
+     top: 52%;
+     left: 8%;
+     width: 85%;
+     height: 20%;
+     background-size: contain;
+     background-repeat: no-repeat;
+     background-position: center;
+}
+.preview-default-3{
+     z-index: 900;
+     position: absolute;
+     top: 73%;
+     left: 8%;
+     width: 85%;
+     height: 20%;
+     background-size: contain;
+     background-repeat: no-repeat;
+     background-position: center;
+}
+.preview-default-4{
+     z-index: 900;
+     position: absolute;
+     top: 94%;
+     left: 8%;
+     width: 85%;
+     height: 20%;
+     background-size: contain;
+     background-repeat: no-repeat;
+     background-position: center;
+}
+.preview-default-5{
+     z-index: 900;
+     position: absolute;
+     top:115%;
+     left: 8%;
+     width: 85%;
+     height: 20%;
+     background-size: contain;
+     background-repeat: no-repeat;
+     background-position: center;
+}
+.preview-default-6{
+     z-index: 900;
+     position: absolute;
+     top:136%;
+     left: 8%;
+     width: 85%;
+     height: 20%;
+     background-size: contain;
+     background-repeat: no-repeat;
+     background-position: center; 
+}
+.preview-default-7{
+     z-index: 900;
+     position: absolute;
+     top:157%;
+     left: 8%;
+     width: 85%;
+     height: 20%;
+     background-size: contain;
+     background-repeat: no-repeat;
+     background-position: center;
+}
+.preview-cnt{
+     text-align: start;
+     left: 12%;
+     top: 0%;
+     position: relative;
+     font-size: 40px;
+     font-family: fantasy;
+}
+.right-photo-div {
+     position: absolute;
+     top: 32%;
+     left: 11%;
      width: 12%;
      height: 18%;
      background-size: contain;
@@ -694,7 +808,11 @@
      pointer-events: none;
      /* Prevents clicks on the flash div */
 }
-
+.left-cnt-div{
+     display: flex;
+     flex-direction: column;
+     background-color: red;
+}
 .animate {
      animation: flashAnimation 0.2s ease-out forwards;
 }
