--- a/app/src/css/Sticker.css
+++ b/app/src/css/Sticker.css
@@ -416,7 +416,10 @@ gap: 6%;
 }
 .print{
      /* 프린트용은 화면밖으로 밀어내기 */
-     margin-left: -1500px ;
+     /* margin-left: -1500px ; */
      width: 200vw;
+     /* background-color: red; */
+}
+.konva-horizontal-image{
      /* background-color: red; */
 }
