--- a/app/src/css/Sticker.css
+++ b/app/src/css/Sticker.css
@@ -420,6 +420,13 @@ gap: 6%;
      width: 200vw;
      /* background-color: red; */
 }
+.konva-vertical-image{
+/* padding-top: 10px; */
+margin-top: 50px;
+/* padding-bottom: 30px; */
+
+     background-color: red;
+}
 .konva-horizontal-image{
      /* background-color: red; */
 }
