--- a/app/src/css/Photo.css
+++ b/app/src/css/Photo.css
@@ -66,7 +66,7 @@
      top: 12%;
      right: 9%;
      width: 15%;
-     height: 75%;
+     height: 80%;
      overflow: hidden;
 }
 .right-preview-div{
@@ -81,57 +81,60 @@
      overflow: hidden;
 }
 .preview-default-0{
+     /* overflow: hidden;
+     border-radius: 20px; */
      z-index: 900;
      position: absolute;
-     top: 10%;
-     left: 8%;
-     width: 85%;
-     height: 20%;
-     background-size: contain;
+     top: 12%;
+     left: 12%;
+     width: 75%;
+     height: 18.5%;
+     background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
 }
 .preview-default-1{
      z-index: 900;
      position: absolute;
-     top: 31%;
-     left: 8%;
-     width: 85%;
-     height: 20%;
-     background-size: contain;
+     top: 32.5%;
+     left: 12%;
+     width: 75%;
+     height: 18.5%;
+     background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
 }
 .preview-default-2{
      z-index: 900;
      position: absolute;
-     top: 52%;
-     left: 8%;
-     width: 85%;
-     height: 20%;
-     background-size: contain;
+     top: 52.5%;
+     left: 12%;
+     width: 75%;
+     height: 18.5%;
+     background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
 }
 .preview-default-3{
      z-index: 900;
      position: absolute;
-     top: 73%;
-     left: 8%;
-     width: 85%;
-     height: 20%;
-     background-size: contain;
+     top: 72.5%;
+     left: 12%;
+     width: 75%;
+     height: 18.5%;
+     background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
 }
 .preview-default-4{
+     opacity: 0;
      z-index: 900;
      position: absolute;
      top: 94%;
-     left: 8%;
-     width: 85%;
+     left: 12%;
+     width: 75%;
      height: 20%;
-     background-size: contain;
+     background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
 }
@@ -139,10 +142,10 @@
      z-index: 900;
      position: absolute;
      top:115%;
-     left: 8%;
-     width: 85%;
+     left: 12%;
+     width: 75%;
      height: 20%;
-     background-size: contain;
+     background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
 }
@@ -150,10 +153,10 @@
      z-index: 900;
      position: absolute;
      top:136%;
-     left: 8%;
-     width: 85%;
+     left: 12%;
+     width: 75%;
      height: 20%;
-     background-size: contain;
+     background-size: cover;
      background-repeat: no-repeat;
      background-position: center; 
 }
@@ -161,10 +164,10 @@
      z-index: 900;
      position: absolute;
      top:157%;
-     left: 8%;
-     width: 85%;
+     left: 12%;
+     width: 75%;
      height: 20%;
-     background-size: contain;
+     background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
 }
