--- a/app/src/css/Payment.css
+++ b/app/src/css/Payment.css
@@ -23,7 +23,7 @@
      width: 9%;
      height: 10%;
      /* Set height of the div */
-     background-image: url('../assets/Common/goback.png');
+     /* background-image: url('../assets/Common/goback.png'); */
      /* Specify the path to your initial background image */
      background-size: contain;
      background-repeat: no-repeat;
@@ -384,11 +384,12 @@
      cursor: pointer;
      position: absolute;
      top: 105%;
-    left: 0%;
+    left: -10%;
      width: 60%;
      height: 16%;
+     /* background-color: red; */
      /* Set height of the div */
-     background-image: url('../assets/Common/check-box.png');
+     /* background-image: url('../assets/Common/check-box.png'); */
      /* Specify the path to your initial background image */
      background-size: contain;
      background-repeat: no-repeat;
@@ -398,7 +399,7 @@
 .check{
      position: absolute;
      top: 16%;
-    left: 1%;
+    left: 5%;
      width: 60%;
      height: 60%;
      /* Set height of the div */
@@ -433,13 +434,14 @@
      bottom: 0px;
      right: 10%;
      width: 20%;
-     height: 30%;
+     height: 20%;
      background-size: contain;
      background-position: center;
      transition: background-image 0.3s ease;
      background-repeat: no-repeat;
      position: absolute;
      left: 41%;
+     z-index: 999;
      /* background-color: teal; */
 
 }
