--- a/app/src/components/CustomCarousel.css
+++ b/app/src/components/CustomCarousel.css
@@ -1,23 +1,27 @@
 .v-carousel-container{
     /* z-index: 0; */
+/* background-color: blue; */
     width: 50%;
-    height: 68%;
+    height: 77%;
     overflow: hidden;
-    right: 18%;
-    bottom: 22%;
+    right: 14%;
+    bottom: 18%;
     position: absolute;
 }
 .v-carousel-images{
+    /* background-color: aqua; */
     display: flex;
-    transition: transform 0.3s ease;
+    /* padding-left: 10px; */
+    /* transition: transform 0.3s ease; */
     cursor: grab;
     /* margin-left: 16px; */
     /* background-color: red; */
     display: flex;
+    
+    display: flex;
     /* gap: 2px; */
     flex-direction: column;
     width: 100%;
-    /* height: 100%; */
 
 }
 .image{
