--- a/app/src/components/FrameCarousel.css
+++ b/app/src/components/FrameCarousel.css
@@ -15,7 +15,8 @@
 
 .frame-carousel-img {
     width: calc(100% / 5 - 30px); /* 한 캐러셀에 5개의 이미지가 보이도록 설정 */
-    height: auto; /* 이미지의 비율을 유지하기 위해 height를 auto로 설정 */
+    height:auto;
+    /* object-fit: contain; */
     user-drag: none;
     user-select: none;
     -moz-user-select: none;
